// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/mentions/demo/async.vue correctly 1`] = `
<div class="ant-mentions"><textarea dropdownclassname="" rows="1"></textarea>
  <!---->
</div>
`;

exports[`renders ./components/mentions/demo/basic.vue correctly 1`] = `
<div class="ant-mentions"><textarea dropdownclassname="" autofocus="" rows="1"></textarea>
  <!---->
</div>
`;

exports[`renders ./components/mentions/demo/form.vue correctly 1`] = `
<form class="ant-form ant-form-horizontal">
  <div class="ant-form-item">
    <div class="ant-row ant-form-row">
      <div class="ant-col ant-col-6 ant-form-item-label"><label for="form_item_coders" class="ant-form-item-required" title="Top coders">Top coders
          <!---->
        </label></div>
      <div class="ant-col ant-col-18 ant-form-item-control">
        <div class="ant-form-item-control-input">
          <div class="ant-form-item-control-input-content">
            <div class="ant-mentions"><textarea dropdownclassname="" rows="1" id="form_item_coders"></textarea>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div class="ant-form-item">
    <div class="ant-row ant-form-row">
      <div class="ant-col ant-col-6 ant-form-item-label"><label for="form_item_bio" class="ant-form-item-required" title="Bio">Bio
          <!---->
        </label></div>
      <div class="ant-col ant-col-18 ant-form-item-control">
        <div class="ant-form-item-control-input">
          <div class="ant-form-item-control-input-content">
            <div class="ant-mentions"><textarea dropdownclassname="" rows="3" placeholder="You can use @ to ref user here" id="form_item_bio"></textarea>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div class="ant-form-item">
    <div class="ant-row ant-form-row">
      <!---->
      <div class="ant-col ant-col-12 ant-col-offset-5 ant-form-item-control">
        <div class="ant-form-item-control-input">
          <div class="ant-form-item-control-input-content"><button class="ant-btn ant-btn-primary" type="button">
              <!----><span>Submit</span>
            </button><button style="margin-left: 8px;" class="ant-btn ant-btn-default" type="button">
              <!----><span>Reset</span>
            </button></div>
        </div>
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
</form>
`;

exports[`renders ./components/mentions/demo/placement.vue correctly 1`] = `
<div class="ant-mentions"><textarea dropdownclassname="" rows="1"></textarea>
  <!---->
</div>
`;

exports[`renders ./components/mentions/demo/prefix.vue correctly 1`] = `
<div class="ant-mentions"><textarea dropdownclassname="" rows="1" placeholder="input @ to mention people, # to mention tag"></textarea>
  <!---->
</div>
`;

exports[`renders ./components/mentions/demo/readonly.vue correctly 1`] = `
<div>
  <div style="margin-bottom: 10px;">
    <div class="ant-mentions ant-mentions-disabled"><textarea dropdownclassname="" disabled="" rows="1" placeholder="this is disabled Mentions"></textarea>
      <!---->
    </div>
  </div>
  <div class="ant-mentions"><textarea dropdownclassname="" rows="1" placeholder="this is readOnly a-mentions" readonly=""></textarea>
    <!---->
  </div>
</div>
`;

exports[`renders ./components/mentions/demo/status.vue correctly 1`] = `
<div class="ant-space ant-space-vertical">
  <div class="ant-space-item" style="margin-bottom: 8px;">
    <div class="ant-mentions ant-mentions-status-error"><textarea dropdownclassname="" autofocus="" rows="1" status="error"></textarea>
      <!---->
    </div>
  </div>
  <!---->
  <div class="ant-space-item">
    <div class="ant-mentions ant-mentions-status-warning"><textarea dropdownclassname="" autofocus="" rows="1" status="warning"></textarea>
      <!---->
    </div>
  </div>
  <!---->
</div>
`;
